--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
 						<div class="main__steps steps-main">
 							<div class="steps-main__item">
 								<div class="steps-main__img"><img src="img/main/icon_01.png" alt="img" /></div>
-								<div class="steps-main__text">Выбираете удобный для вас банк партнер</div>
+								<div class="steps-main__text">Лера иди нахуй</div>
 							</div>
 							<div class="steps-main__item">
 								<div class="steps-main__img"><img src="img/main/icon_02.png" alt="img" /></div>
-								<div class="steps-main__text">Эквайринг - принимайте оплату за аренду автомобиля</div>
+								<div class="steps-main__text">Лера иди нахуй</div>
 							</div>
 							<div class="steps-main__item">
 								<div class="steps-main__img"><img src="img/main/icon_03.png" alt="img" /></div>
-								<div class="steps-main__text">Моментальные выплаты за 3-5 секунд на карту</div>
+								<div class="steps-main__text">Лера иди нахуйкарту</div>
 							</div>
 							<div class="steps-main__item">
 								<div class="steps-main__img"><img src="img/main/icon_04.png" alt="img" /></div>
-								<div class="steps-main__text">Удобное приложение для водителей</div>
+								<div class="steps-main__text">Лера иди нахуй</div>
 							</div>
 						</div>
 					</div>
