--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 				<div class="main__container">
 					<div class="main__container-small">
 						<div class="main__content">
-							<h1 class="main__title">Лера <span>иди нахуй</span></h1>
+							<h1 class="main__title">Сервис автоматизации для <span>таксопарков</span></h1>
 							<div data-da=".mobile-block, 991" class="main__block block-main">
 								<div class="block-main__top top-main">
 									<div class="top-main__days"><img src="img/main/days.png" alt="30 дней" /></div>
-									<div class="top-main__text">лера иди нахуй</div>
+									<div class="top-main__text">Бесплатного доступа к системе</div>
 								</div>
 								<div class="block-main__bottom bottom-main">
 									<div class="bottom-main__text">
-										<h3 class="bottom-main__label">лера иди нахуй</h3>
-										<div class="bottom-main__caption">лера иди нахуй</div>
+										<h3 class="bottom-main__label">Избавьте себя от ежедневной рутины с водителями</h3>
+										<div class="bottom-main__caption">Заполните форму и получите тестовый доступ в течение часа</div>
 									</div>
 									<form action="#" method="post" class="bottom-main__form form-main">
 										<div class="form-main__inputs">
@@ -61,9 +61,9 @@
 											</div>
 										</div>
 										<div class="form-main__send">
-											<button class="form-main__button" type="submit">послать леру нахуй</button>
+											<button class="form-main__button" type="submit">Отправить заявку</button>
 											<div class="form-main__caption">
-												Нажимая на кнопку, вы соглашаетесь с <a href="#">тем что лера пойдет нахуй</a>
+												Нажимая на кнопку, вы соглашаетесь с <a href="#">политикой конфиденциальности</a>
 											</div>
 										</div>
 									</form>
